Forum erster Upload

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,10 +13,11 @@
 			</button>
 			<nav class="d-flex justify-content-between align-items-center collapse" id="navbarToggleExternalContent">
 				<div class="px-lg-3 px-xl-4 d-flex flex-column flex-lg-row">
-					<a href="{{ site.baseurl }}/co2-emissionen" class="nav-link text-primary m-lg-3 m-xxl-4 co2-emissionen">CO₂-Emissionen</a>
-					<a href="{{ site.baseurl }}/ueber-uns" class="nav-link text-primary m-lg-3 m-xxl-4 ueber-uns">Über Uns</a>
-					<a href="{{ site.baseurl }}/blog" class="nav-link text-primary m-lg-3 m-xxl-4 blog">Blog</a>
-					<a href="{{ site.baseurl }}/kontakt" class="nav-link text-primary m-lg-3 m-xxl-4 kontakt">Kontakt</a>
+					<a href="{{ site.baseurl }}/co2-emissionen" class="nav-link text-primary m-lg-2 m-xl-3 m-xxl-4 co2-emissionen">CO₂-Emissionen</a>
+					<a href="{{ site.baseurl }}/ueber-uns" class="nav-link text-primary m-lg-2 m-xl-3 m-xxl-4 ueber-uns">Über Uns</a>
+					<a href="{{ site.baseurl }}/blog" class="nav-link text-primary m-lg-2 m-xl-3 m-xxl-4 blog">Blog</a>
+					<a href="{{ site.baseurl }}/forum" class="nav-link text-primary m-lg-2 m-xl-3 m-xxl-4 forum">Forum</a>
+					<a href="{{ site.baseurl }}/kontakt" class="nav-link text-primary m-lg-2 m-xl-3 m-xxl-4 kontakt">Kontakt</a>
 				</div>
 				<div class="d-inline pt-3 pt-lg-1">
 					{% include socialIcons.html %}
