--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -67,10 +67,10 @@
 <!-- React + ReactDOM + Bootstrap + Chart + Swiper -->
 <script src="{{ site.baseurl }}/libs/js/react.development.js"></script>
 <script src="{{ site.baseurl }}/libs/js/react-dom.development.js"></script>
-<script src="{{ site.baseurl }}/libs/js/bootstrap.bundle.min.js"></script>
+<!-- <script src="{{ site.baseurl }}/libs/js/bootstrap.bundle.min.js"></script> -->
 <script src="{{ site.baseurl }}/libs/js/chart.js"></script>
 <script src="{{ site.baseurl }}/libs/js/swiper-bundle.min.js"></script>
 
 <!-- Javascript -->
 <script src="{{ site.baseurl }}/assets/js/scripts.js"></script>
-<script src="{{ site.baseurl }}/assets/js/react.compiled.js"></script>
+<script type="module" src="{{ site.baseurl }}/assets/js/react.compiled.js"></script>
