--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,6 +11,17 @@
 		{% endif %}
 	</title>
 
+	{% if page.description %}
+		<meta name="description" content="{{ page.description }}">
+	{% endif %}
+
+	{% if page.imageURL %}
+		<meta property="og:image" content="{{ site.baseurl }}/{{ page.imageURL }}">
+		<meta property="og:image:type" content="image/jpeg">
+		<meta property="og:image:width" content="2000">
+		<meta property="og:image:height" content="1272">
+	{% endif %}
+
 	<!-- Stylesheets -->
 	<link rel="stylesheet" href="{{ site.baseurl }}/libs/css/bootstrap.min.css" />
 	<link rel="stylesheet" href="{{ site.baseurl }}/libs/css/swiper-bundle.min.css" />
