--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,6 +13,8 @@
 
 	{% if page.description %}
 		<meta name="description" content="{{ page.description }}">
+	{% else %}
+		{% if site.descriptionBasic %} <meta name="description" content="{{ site.descriptionBasic }}"> {% endif %}
 	{% endif %}
 
 	{% if page.imageURL %}
@@ -20,7 +22,14 @@
 		<meta property="og:image:type" content="image/jpeg">
 		<meta property="og:image:width" content="2000">
 		<meta property="og:image:height" content="1272">
-	{% endif %}
+	{% else %}
+		{% if site.imageURLBasic %} 
+			<meta property="og:image" content="{{ site.baseurl }}/{{ site.imageURLBasic }}">
+			<meta property="og:image:type" content="image/jpeg">
+			<meta property="og:image:width" content="2000">
+			<meta property="og:image:height" content="1272">
+		{% endif %}
+	{% endif %}	
 
 	<!-- Stylesheets -->
 	<link rel="stylesheet" href="{{ site.baseurl }}/libs/css/bootstrap.min.css" />
