Anpassung Footer und Datenschutzerklärung

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -36,6 +36,7 @@
                             <a href="{{ site.baseurl }}/co2-emissionen" class="fs-6 text-decoration-none text-white">CO₂-Emissionen</a>
                             <a href="{{ site.baseurl }}/ueber-uns" class="fs-6 text-decoration-none text-white">Über Uns</a>
                             <a href="{{ site.baseurl }}/blog" class="fs-6 text-decoration-none text-white">Blog</a>
+                            <a href="{{ site.baseurl }}/forum" class="fs-6 text-decoration-none text-white">Forum</a>
                             <a href="{{ site.baseurl }}/kontakt" class="fs-6 text-decoration-none text-white">Kontakt</a>
                         </nav>
                     </div>
